--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  netguardian-dashboard:
+  dashboard:
     build: .
-    container_name: netguardian-ai
+    container_name: netguardian-dashboard
     ports:
       - "8501:8501"
     volumes:
+      - ./logs:/app/logs
       - ./data:/app/data
       - ./models:/app/models
-      - ./logs:/app/logs
-      - ./reports:/app/reports
+      - ./config:/app/config
     environment:
       - PYTHONUNBUFFERED=1
-      - LOG_LEVEL=INFO
+      - USE_MOCK_MODELS=true
     restart: unless-stopped
     networks:
       - netguardian-network
