--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ plotly>=5.14.0
 
 # Dashboard & Web Interface
 streamlit>=1.25.0
+streamlit-autorefresh>=0.0.1
 dash>=2.11.0
 dash-bootstrap-components>=1.4.0
 
